src/objects/Vehicle__c.object
<CustomObject>
    <description>Contact Portfolio: To record all Vehicle which is linked to a Vehicle Relationship for a customer</description>
    <fields>
        <fullName>AMG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Date__c</fullName>
        <label>Add Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_User__c</fullName>
        <label>Add User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaumusterEx__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Extended baumuster: Code for drive (steering) and transmission 
(Drive: &quot;1&quot;=left-hand drive; &quot;2&quot; for right-hand drive) 
(Transmission: &quot;1&quot;=manual; &quot;2&quot;=automatic) 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_BaumusterEx&quot;</description>
        <label>BaumusterEx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LeftManual</fullName>
                </value>
                <value>
                    <fullName>LeftAuto</fullName>
                </value>
                <value>
                    <fullName>RightManual</fullName>
                </value>
                <value>
                    <fullName>RightAuto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baumuster__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: 6-digit-Baumuster 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_Baumuster&quot;</description>
        <label>Baumuster</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyBuilderInformation__c</fullName>
        <label>Body Builder Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyType__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle Body Type 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_BodyType&quot;</description>
        <label>BodyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MPV</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>SEDAN</fullName>
                </value>
                <value>
                    <fullName>SHOOTING BRAKE</fullName>
                </value>
                <value>
                    <fullName>SPORTCOUPE</fullName>
                </value>
                <value>
                    <fullName>4 DOOR COUPE</fullName>
                </value>
                <value>
                    <fullName>HATCHBACK</fullName>
                </value>
                <value>
                    <fullName>ESTATE</fullName>
                </value>
                <value>
                    <fullName>COUPE</fullName>
                </value>
                <value>
                    <fullName>CABRIO</fullName>
                </value>
                <value>
                    <fullName>ROADSTER</fullName>
                </value>
                <value>
                    <fullName>Limousine</fullName>
                </value>
                <value>
                    <fullName>Convertible</fullName>
                </value>
                <value>
                    <fullName>Hatch</fullName>
                </value>
                <value>
                    <fullName>Pullman</fullName>
                </value>
                <value>
                    <fullName>Commercial vehicle</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>Two-door family sedan</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>SUVs</fullName>
                </value>
                <value>
                    <fullName>Sports car</fullName>
                </value>
                <value>
                    <fullName>Saloon</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Panel Van</fullName>
                </value>
                <value>
                    <fullName>Tipper</fullName>
                </value>
                <value>
                    <fullName>Rigid</fullName>
                </value>
                <value>
                    <fullName>Prime Mover</fullName>
                </value>
                <value>
                    <fullName>Compact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>MB brand</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Volkswagen</fullName>
                </value>
                <value>
                    <fullName>Lexus</fullName>
                </value>
                <value>
                    <fullName>Abarth</fullName>
                </value>
                <value>
                    <fullName>Alfa Romeo</fullName>
                </value>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>AMC Jeep</fullName>
                </value>
                <value>
                    <fullName>Apal</fullName>
                </value>
                <value>
                    <fullName>Arutega</fullName>
                </value>
                <value>
                    <fullName>Aston Martin</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Autobianchi</fullName>
                </value>
                <value>
                    <fullName>Avanti</fullName>
                </value>
                <value>
                    <fullName>Bandenpura</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>Bertone</fullName>
                </value>
                <value>
                    <fullName>Birkin</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BMW Alpina</fullName>
                </value>
                <value>
                    <fullName>Brabus</fullName>
                </value>
                <value>
                    <fullName>Bugatti</fullName>
                </value>
                <value>
                    <fullName>Buick</fullName>
                </value>
                <value>
                    <fullName>Burstner</fullName>
                </value>
                <value>
                    <fullName>Cadillac</fullName>
                </value>
                <value>
                    <fullName>Canada Honda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBU_CKD__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Car is CBU or CKD 
Used in: Pagelayouts, Reports, Formula 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_CBU-CKD&quot;</description>
        <label>CBU-CKD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CKD</fullName>
                </value>
                <value>
                    <fullName>CBU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CO2Emission__c</fullName>
        <label>CO2Emission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CROUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRO User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>CLA-Class</fullName>
                </value>
                <value>
                    <fullName>CL-Class</fullName>
                </value>
                <value>
                    <fullName>CLK-Class</fullName>
                </value>
                <value>
                    <fullName>CLS-Class</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>GLA-Class</fullName>
                </value>
                <value>
                    <fullName>GL-Class</fullName>
                </value>
                <value>
                    <fullName>GLK-Class</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>M-Class</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL-Class</fullName>
                </value>
                <value>
                    <fullName>SLC-Class</fullName>
                </value>
                <value>
                    <fullName>SLK-Class</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>VIANO</fullName>
                </value>
                <value>
                    <fullName>VITO</fullName>
                </value>
                <value>
                    <fullName>smart fortwo</fullName>
                </value>
                <value>
                    <fullName>smart forfour</fullName>
                </value>
                <value>
                    <fullName>smart roadster</fullName>
                </value>
                <value>
                    <fullName>GLC-Class</fullName>
                </value>
                <value>
                    <fullName>GLE-Class</fullName>
                </value>
                <value>
                    <fullName>SLR-Class</fullName>
                </value>
                <value>
                    <fullName>SLS-Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_and_Body__c</fullName>
        <formula>Car_Model__r.Model_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class and Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle Colour 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_Colour&quot;</description>
        <label>Colour</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Notes/Comments/Remarks for vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_Comment&quot;</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionNumber__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Reservation number
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_CommissionNumber&quot;</description>
        <label>Commission No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Brand__c</fullName>
        <description>Competitor brand</description>
        <label>Competitor Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dodge</fullName>
                </value>
                <value>
                    <fullName>Abarth</fullName>
                </value>
                <value>
                    <fullName>Alfa Romeo</fullName>
                </value>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>AMC Jeep</fullName>
                </value>
                <value>
                    <fullName>Apal</fullName>
                </value>
                <value>
                    <fullName>Arutega</fullName>
                </value>
                <value>
                    <fullName>Aston Martin</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Autobianchi</fullName>
                </value>
                <value>
                    <fullName>Avanti</fullName>
                </value>
                <value>
                    <fullName>Bandenpura</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>Bertone</fullName>
                </value>
                <value>
                    <fullName>Birkin</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>BMW Alpina</fullName>
                </value>
                <value>
                    <fullName>Brabus</fullName>
                </value>
                <value>
                    <fullName>Bugatti</fullName>
                </value>
                <value>
                    <fullName>Buick</fullName>
                </value>
                <value>
                    <fullName>Burstner</fullName>
                </value>
                <value>
                    <fullName>Cadillac</fullName>
                </value>
                <value>
                    <fullName>Canada Honda</fullName>
                </value>
                <value>
                    <fullName>Carb Deeds</fullName>
                </value>
                <value>
                    <fullName>Carlson</fullName>
                </value>
                <value>
                    <fullName>Caterham</fullName>
                </value>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Chrysler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Model__c</fullName>
        <label>Competitor Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentMileage__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The current mileage 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is &quot;Vehicle_CurrentMileageÃ¢â‚¬Å“</description>
        <label>CurrentMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CylinderCapacity__c</fullName>
        <label>CylinderCapacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_Instance__c</fullName>
        <formula>YEAR(Warranty_Start_Date__c)-YEAR(Latest_Contract_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Description of the vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_DescriptionÃ¢â‚¬Å“</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineNumber__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Engine number 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_EngineNumberÃ¢â‚¬Å“</description>
        <label>Engine No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EuroVIN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Euro VIN 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle isÃ¢â‚¬ÂVehicle_EuroVINÃ¢â‚¬Å“</description>
        <externalId>true</externalId>
        <label>EuroVIN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceExpiryDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: ExpiryDate of Financing/Leasing 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_FinanceExpiryDateÃ¢â‚¬Å“</description>
        <label>FinanceExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinanceType__c</fullName>
        <label>FinanceType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Method__c</fullName>
        <label>Finance Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstRegistrationDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date of the first ever registration of the vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_FirstRegistrationDateÃ¢â‚¬Å“</description>
        <label>FirstRegistrationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fuel__c</fullName>
        <label>Fuel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>Methanol</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>LPG</fullName>
                </value>
                <value>
                    <fullName>Kerosene</fullName>
                </value>
                <value>
                    <fullName>Light Oil</fullName>
                </value>
                <value>
                    <fullName>Gasoline/LPG</fullName>
                </value>
                <value>
                    <fullName>Gasoline/Kerosene</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Ethanol</fullName>
                </value>
                <value>
                    <fullName>CNG</fullName>
                </value>
                <value>
                    <fullName>LNG</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>Hydrogen</fullName>
                </value>
                <value>
                    <fullName>Gasoline/Electricity</fullName>
                </value>
                <value>
                    <fullName>LPG/Electricity</fullName>
                </value>
                <value>
                    <fullName>Light Oil/Electricity</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Petrol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grey_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grey Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Source__c</fullName>
        <label>Info Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Outdoor Advertising</fullName>
                </value>
                <value>
                    <fullName>Newspaper/Magazine</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>TV Advertising</fullName>
                </value>
                <value>
                    <fullName>Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Dealer Exhibition Hall</fullName>
                </value>
                <value>
                    <fullName>Web/Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz DrivingAcademy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_Sub_Source__c</fullName>
        <label>Info Sub-Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Info_Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Friend Recommendation</fullName>
                </value>
                <value>
                    <fullName>Telephone Query Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>User Guide</fullName>
                </value>
                <value>
                    <fullName>China Air</fullName>
                </value>
                <value>
                    <fullName>Artron</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Other Activity</fullName>
                </value>
                <value>
                    <fullName>Car Exhibition</fullName>
                </value>
                <value>
                    <fullName>Third Party (Partner) email contact</fullName>
                </value>
                <value>
                    <fullName>China Telecom/189 email</fullName>
                </value>
                <value>
                    <fullName>Dealer email contact</fullName>
                </value>
                <value>
                    <fullName>E-magazine</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Electronic Journal</fullName>
                </value>
                <value>
                    <fullName>The Ritz Carlton Hotel</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Dealer telephone contact</fullName>
                </value>
                <value>
                    <fullName>Third Party Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Third Party (Partner) Mail_Minsheng Bank</fullName>
                </value>
                <value>
                    <fullName>Products range cards</fullName>
                </value>
                <value>
                    <fullName>Third Party (Partner) Mail _Bank of Communication</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz magazine</fullName>
                </value>
                <value>
                    <fullName>Brochure &amp; Price List</fullName>
                </value>
                <value>
                    <fullName>Other Mail</fullName>
                </value>
                <value>
                    <fullName>Dealer message contact</fullName>
                </value>
                <value>
                    <fullName>Other message</fullName>
                </value>
                <value>
                    <fullName>Third Party Message Contact</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Message Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceExpiryDate__c</fullName>
        <label>InsuranceExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastInspectionDate__c</fullName>
        <label>LastInspectionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastServiceDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date of the last service of vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle isÃ¢â‚¬Â LastServiceDateÃ¢â‚¬Å“</description>
        <label>LastServiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastServiceMileage__c</fullName>
        <label>LastServiceMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastWorkDate__c</fullName>
        <label>LastWorkDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_Date__c</fullName>
        <description>Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_LatestSalesContractDateÃ¢â‚¬Å“</description>
        <label>Latest Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Handover_Date__c</fullName>
        <description>Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_LatestSalesDeliveryDateÃ¢â‚¬Å“</description>
        <label>Latest Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice_Date__c</fullName>
        <description>Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_LatestSalesInvoiceDateÃ¢â‚¬Å“</description>
        <label>Latest Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Sales_Person__c</fullName>
        <description>Attribute in Data Dictionary object Vehicle is â€Vehicle_LatestSalesPersonâ€œ</description>
        <label>Latest Sales Person</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;),&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;),&apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;),&apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;),&apos;TH&apos;, IF(ISPICKVAL($User.Market__c, &apos;KR&apos;),&apos;KR&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Expired_Date__c</fullName>
        <label>MOT Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;MY&apos;), &apos;MY&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;&apos;))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>